Implemented TestMode, transparent SearchBox custom NSWindow

--- a/lupa/Base.lproj/MainMenu.xib
+++ b/lupa/Base.lproj/MainMenu.xib
@@ -717,5 +717,6 @@
             </view>
             <point key="canvasLocation" x="-343" y="-514"/>
         </window>
+        <customObject id="9lb-TX-afV"/>
     </objects>
 </document>
