--- a/lupa/Base.lproj/MainMenu.xib
+++ b/lupa/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A244d" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14F25a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8173.3"/>
     </dependencies>
@@ -695,7 +695,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="-670" y="-1111.5"/>
+            <point key="canvasLocation" x="-689.5" y="-1095.5"/>
         </menu>
         <customObject id="9lb-TX-afV"/>
     </objects>
