--- a/lupa/Base.lproj/MainMenu.xib
+++ b/lupa/Base.lproj/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14F25a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8187.4" systemVersion="15A279b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8173.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8187.4"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -688,6 +688,12 @@
                         <action selector="showPreferences:" target="-1" id="sBB-1Z-fy0"/>
                     </connections>
                 </menuItem>
+                <menuItem title="About" id="q7G-tF-AZa">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="orderFrontStandardAboutPanel:" target="-2" id="BgS-gj-caT"/>
+                    </connections>
+                </menuItem>
                 <menuItem isSeparatorItem="YES" id="etV-dZ-Vce"/>
                 <menuItem title="Quit" keyEquivalent="q" id="1nw-Zm-eNh">
                     <connections>
@@ -695,7 +701,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="-689.5" y="-1095.5"/>
+            <point key="canvasLocation" x="-551" y="-1314.5"/>
         </menu>
         <customObject id="9lb-TX-afV"/>
     </objects>
