--- a/lupa-main/LupaSearchViewCtrl.xib
+++ b/lupa-main/LupaSearchViewCtrl.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8187.4" systemVersion="15A279b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15B17c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8187.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
         <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <objects>
@@ -13,49 +13,95 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="115"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="184"/>
             <subviews>
-                <box title="Lupa" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="m3J-ke-4la">
-                    <rect key="frame" x="18" y="15" width="265" height="80"/>
-                    <view key="contentView" id="OLY-KU-OmL">
-                        <rect key="frame" x="1" y="1" width="263" height="64"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vVZ-ip-9hD" customClass="LupaSearchTextField" customModule="lupa" customModuleProvider="target">
-                                <rect key="frame" x="20" y="22" width="223" height="22"/>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="8Uh-1u-hC3">
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="184"/>
+                    <subviews>
+                        <box title="Lupa" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="m3J-ke-4la">
+                            <rect key="frame" x="18" y="84" width="265" height="80"/>
+                            <view key="contentView" id="OLY-KU-OmL">
+                                <rect key="frame" x="1" y="1" width="263" height="64"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vVZ-ip-9hD" customClass="LupaSearchTextField" customModule="lupa" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="22" width="223" height="22"/>
+                                        <animations/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="VgV-yB-Wah">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                        <connections>
+                                            <action selector="doSearch:" target="-2" id="usi-j7-Vbs"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="vVZ-ip-9hD" secondAttribute="trailing" constant="20" symbolic="YES" id="1Gu-ks-nnh"/>
+                                    <constraint firstAttribute="bottom" secondItem="vVZ-ip-9hD" secondAttribute="bottom" constant="22" id="XfP-vR-RaJ"/>
+                                    <constraint firstItem="vVZ-ip-9hD" firstAttribute="top" secondItem="OLY-KU-OmL" secondAttribute="top" constant="20" symbolic="YES" id="ZdF-8g-Lvm"/>
+                                    <constraint firstItem="vVZ-ip-9hD" firstAttribute="leading" secondItem="OLY-KU-OmL" secondAttribute="leading" constant="20" symbolic="YES" id="jaI-lB-8QO"/>
+                                </constraints>
                                 <animations/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="VgV-yB-Wah">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                                <connections>
-                                    <action selector="doSearch:" target="-2" id="usi-j7-Vbs"/>
-                                </connections>
-                            </textField>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="vVZ-ip-9hD" firstAttribute="top" secondItem="OLY-KU-OmL" secondAttribute="top" constant="20" symbolic="YES" id="BW6-Ux-rTZ"/>
-                            <constraint firstItem="vVZ-ip-9hD" firstAttribute="leading" secondItem="OLY-KU-OmL" secondAttribute="leading" constant="20" symbolic="YES" id="WqN-VT-VYB"/>
-                            <constraint firstAttribute="trailing" secondItem="vVZ-ip-9hD" secondAttribute="trailing" constant="20" symbolic="YES" id="geX-u3-O1z"/>
-                        </constraints>
-                        <animations/>
-                    </view>
+                            </view>
+                            <animations/>
+                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </box>
+                        <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OsT-X7-qcT">
+                            <rect key="frame" x="20" y="20" width="260" height="60"/>
+                            <clipView key="contentView" id="4oB-k2-4aU">
+                                <rect key="frame" x="1" y="1" width="258" height="58"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <view translatesAutoresizingMaskIntoConstraints="NO" id="5j5-ZI-ZvW">
+                                        <rect key="frame" x="0.0" y="-36" width="181" height="94"/>
+                                        <animations/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5j5-ZI-ZvW" firstAttribute="leading" secondItem="4oB-k2-4aU" secondAttribute="leading" id="1Qg-vS-y3p"/>
+                                    <constraint firstAttribute="trailing" secondItem="5j5-ZI-ZvW" secondAttribute="trailing" constant="77" id="UNA-f8-Df0"/>
+                                    <constraint firstAttribute="bottom" secondItem="5j5-ZI-ZvW" secondAttribute="bottom" constant="-36" id="dd0-6I-sJg"/>
+                                    <constraint firstItem="5j5-ZI-ZvW" firstAttribute="top" secondItem="4oB-k2-4aU" secondAttribute="top" id="jEe-GB-IVU"/>
+                                </constraints>
+                                <animations/>
+                            </clipView>
+                            <animations/>
+                            <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="Kwu-MV-ZuF">
+                                <rect key="frame" x="1" y="43" width="258" height="16"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <animations/>
+                            </scroller>
+                            <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="jKJ-u4-qat">
+                                <rect key="frame" x="243" y="1" width="16" height="58"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <animations/>
+                            </scroller>
+                        </scrollView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="OsT-X7-qcT" firstAttribute="top" secondItem="m3J-ke-4la" secondAttribute="bottom" constant="8" symbolic="YES" id="7RN-sJ-J7i"/>
+                        <constraint firstItem="m3J-ke-4la" firstAttribute="top" secondItem="8Uh-1u-hC3" secondAttribute="top" constant="20" symbolic="YES" id="Ale-VH-wpO"/>
+                        <constraint firstAttribute="bottom" secondItem="OsT-X7-qcT" secondAttribute="bottom" constant="20" symbolic="YES" id="D0q-Sl-y9X"/>
+                        <constraint firstItem="OsT-X7-qcT" firstAttribute="centerX" secondItem="m3J-ke-4la" secondAttribute="centerX" id="Hdg-XU-Shu"/>
+                        <constraint firstItem="m3J-ke-4la" firstAttribute="trailing" secondItem="OsT-X7-qcT" secondAttribute="trailing" id="Jh3-62-cvJ"/>
+                        <constraint firstAttribute="trailing" secondItem="m3J-ke-4la" secondAttribute="trailing" constant="20" symbolic="YES" id="axb-zd-Dtg"/>
+                        <constraint firstItem="OsT-X7-qcT" firstAttribute="leading" secondItem="8Uh-1u-hC3" secondAttribute="leading" constant="20" symbolic="YES" id="v2h-aX-Y5U"/>
+                    </constraints>
                     <animations/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                </box>
+                </customView>
             </subviews>
             <constraints>
-                <constraint firstItem="m3J-ke-4la" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" symbolic="YES" id="HeM-WA-zyD"/>
-                <constraint firstItem="m3J-ke-4la" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="k5u-1k-NKb"/>
-                <constraint firstAttribute="trailing" secondItem="m3J-ke-4la" secondAttribute="trailing" constant="20" symbolic="YES" id="kN3-58-e6W"/>
-                <constraint firstItem="m3J-ke-4la" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="xIU-8p-Gji"/>
+                <constraint firstAttribute="trailing" secondItem="8Uh-1u-hC3" secondAttribute="trailing" id="Ahc-of-IG3"/>
+                <constraint firstItem="8Uh-1u-hC3" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="BVj-My-OgP"/>
+                <constraint firstAttribute="bottom" secondItem="8Uh-1u-hC3" secondAttribute="bottom" id="Tay-ha-Awi"/>
+                <constraint firstItem="8Uh-1u-hC3" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="U1C-FG-5x0"/>
             </constraints>
             <animations/>
-            <point key="canvasLocation" x="-4" y="130.5"/>
+            <point key="canvasLocation" x="-832" y="70"/>
         </customView>
     </objects>
 </document>
